--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
-    "eslint": "^8.55.0"
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
