--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
       "node": true
     },
     "parserOptions": {
-      "ecmaVersion": 2018
+      "ecmaVersion": "latest"
     },
     "rules": {
       "no-underscore-dangle": "off",
